# jiraiya

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: ENTERPRISE_PROGRESS.md  ENTERPRISE_REVIEW.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  QUICK_REFERENCE.md
src/: main.py
src/api/: deps.py  errors.py
src/api/v1/: router.py
src/core/: config.py  exceptions.py  logging.py  prompts.py
src/schemas/: story.py
src/services/: story_generator.py
tests/: conftest.py  test_auth.py  test_main.py  utils.py
