[tool.poetry]
name = "jiraiya-service"
version = "0.1.0"
description = "AI Story Generator Service"
authors = ["Antigravity <antigravity@gemini.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
openai = "^1.40.0"
httpx = "^0.27.0"
tenacity = "^8.5.0"
structlog = "^24.1.0"
asgi-correlation-id = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.0"
black = "^24.8.0"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
